# chall2025-cwe-120

./: HACKME.md  README.md  challenge.yaml  challenge_template.yaml  docker-compose.yaml
offline-artifacts/: about-CWE-120.txt  login-using-dummy-password  login.c
solution/: FLAGS.md  README.md
source/: CMakeLists.txt  README.md  docker-compose.yaml  docker-compose.yml
source/chall/: flag.txt  login  socat_server.sh
source/code/: login.c
